fix: remove useless sort from mongo's api key search
Remove useless sort from mongo's api key search,
As it consumes useless database resources.